--- a/blog/templates/registration/logged_out.html
+++ b/blog/templates/registration/logged_out.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<p>a mail has been sent with the password reset link</p>
+    <a href="{% url 'login'%}">Click here to login again.</a>
+    <a href="{% url 'home'%}">HOME</a>
 
 </body>
 </html>
