--- a/blog/templates/registration/password_reset_confirm.html
+++ b/blog/templates/registration/password_reset_confirm.html
@@ -2,9 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+{% if validlink  %}
+<form method="POST" action="">
+    {% csrf_token %}
+    {{   form.password1.errors }}
+    <input type="password" name="new_password1">
+     {{  form.password2.errors }}
+    <input type="password" name="new_password2">
+    <input type="submit">
+</form>
+{% else %}
+<p>NOT VALID</p>
+{% endif %}
 </body>
 </html>
