--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,7 +1,7 @@
 {% extends 'blog/base.html' %}
 {%  load static %}
 
-{%  block title %} post.content {% endblock %}
+{%  block title %} content{% endblock %}
 
 {%  block body %}
     <div id="cover-detail" style="background-image: url('/media/{{ post.img }}');">
