--- a/blog/templates/registration/password_change_form.html
+++ b/blog/templates/registration/password_change_form.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<form method="POST" action="">
+    <input type="password" name="old_pasword">
+    Password1<br>
+    <input type="password" name="new_password1">
+    Password2<br>
+     <input type="password" name="new_password2">
+    <br>
+    <input type="submit">
+</form>
+
 </body>
 </html>
