--- a/blog/templates/registration/password_reset_complete.html
+++ b/blog/templates/registration/password_reset_complete.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+  <p>password successfully reset</p>
+  <a href="{% url 'login' %}">click here to login</a>
 </body>
 </html>
